<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">英雄花开</string>
    <string name="app_subtitle">野炊教学 户外烹饪指南</string>
    <string name="app_cover_desc">野炊教学应用封面</string>
    <string name="tap_to_continue">点击屏幕继续</string>
    <string name="enter_app">进入应用</string>
    <string name="version_info">版本 1.1</string>
    <string name="welcome">欢迎使用野炊教学系统</string>
    
    <!-- 团队信息页面 -->
    <string name="team_info_title">团队信息登记</string>
    <string name="team_info_subtitle">请填写您的小组信息</string>
    <string name="hint_school">学校名称--小组名</string>
    <string name="label_grade">年级</string>
    <string name="label_class">班级</string>
    <string name="label_stove">炉号</string>
    <string name="label_member_count">小组人数（1-12人）</string>
    <string name="label_member_names">人员姓名</string>
    <string name="hint_member_name">姓名（最多5字）</string>
    <string name="button_reset">重置</string>
    <string name="button_save">保存</string>
    <string name="button_start">进行团队分工</string>
    
    <!-- 下拉选项提示 -->
    <string name="prompt_select_grade">请选择年级</string>
    <string name="prompt_select_class">请选择班级</string>
    <string name="prompt_select_stove">请选择炉号</string>
    
    <!-- 提示信息 -->
    <string name="toast_input_incomplete">请填写完整信息</string>
    <string name="toast_info_saved">信息已保存</string>
    <string name="toast_reset_confirm">已重置</string>
    <string name="toast_member_count_invalid">小组人数必须在1-12之间</string>
    <string name="member_label">成员 %d</string>
    
    <!-- 导航页面 -->
    <string name="nav_title">请选择功能</string>
    <string name="nav_video_title">微课视频</string>
    <string name="nav_video_desc">观看野炊教学视频\n学习烹饪技巧</string>
    <string name="nav_record_title">过程记录</string>
    <string name="nav_record_desc">记录野炊过程\n拍照上传作品</string>
    
    <!-- 视频页面 -->
    <string name="video_page_title">微课视频</string>
    <string name="video_list_title">视频列表</string>
    <string name="button_back">返回</string>
    <string name="video_play_icon">播放图标</string>
    
    <!-- 年级选项 -->
    <string-array name="grades">
        <item>请选择年级</item>
        <item>高一</item>
        <item>高二</item>
    </string-array>
    
    <!-- 班级选项 -->
    <string-array name="classes">
        <item>请选择班级</item>
        <item>1班</item>
        <item>2班</item>
        <item>3班</item>
        <item>4班</item>
        <item>5班</item>
        <item>6班</item>
        <item>7班</item>
        <item>8班</item>
        <item>9班</item>
        <item>10班</item>
        <item>11班</item>
        <item>12班</item>
        <item>13班</item>
        <item>14班</item>
        <item>15班</item>
        <item>16班</item>
        <item>17班</item>
        <item>18班</item>
        <item>19班</item>
        <item>20班</item>
        <item>21班</item>
        <item>22班</item>
        <item>23班</item>
        <item>24班</item>
        <item>25班</item>
    </string-array>
    
    <!-- 炉号选项 -->
    <string-array name="stoves">
        <item>请选择炉号</item>
        <item>1号炉</item>
        <item>2号炉</item>
        <item>3号炉</item>
        <item>4号炉</item>
        <item>5号炉</item>
        <item>6号炉</item>
        <item>7号炉</item>
        <item>8号炉</item>
        <item>9号炉</item>
        <item>10号炉</item>
        <item>11号炉</item>
        <item>12号炉</item>
        <item>13号炉</item>
        <item>14号炉</item>
        <item>15号炉</item>
        <item>16号炉</item>
        <item>17号炉</item>
        <item>18号炉</item>
        <item>19号炉</item>
        <item>20号炉</item>
    </string-array>
    
    <!-- 小组人数选项 -->
    <string-array name="member_counts">
        <item>请选择人数</item>
        <item>1人</item>
        <item>2人</item>
        <item>3人</item>
        <item>4人</item>
        <item>5人</item>
        <item>6人</item>
        <item>7人</item>
        <item>8人</item>
        <item>9人</item>
        <item>10人</item>
        <item>11人</item>
        <item>12人</item>
    </string-array>
</resources>

